version/0.39/_sources/api/solver/_autosummary/settings/discrete_phase_6.rst.txt
:orphan:

.. _discrete_phase_6:

discrete_phase
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.discrete_phase_6
    :show-inheritance:

.. rubric:: Attributes

==================================================================================   ====================================================================================================================================================

Attribute                                                                                                                                                                                                                         Summary

==================================================================================   ====================================================================================================================================================
:ref:`histogram <histogram_1>`                                                                                                                                             Configure how particle data is reduced for histogram analysis.

:ref:`sampling_and_erosion <sampling_and_erosion>`                                                                                                                             Configure sampling of particle trajectory data for output.

:ref:`per_injection_zone_summaries_enabled <per_injection_zone_summaries_enabled>`                                                                 Specifies whether to enable or disable the per-injection per-zone DPM summary reports.

:ref:`zone_types_to_calc_exchange_data_on <zone_types_to_calc_exchange_data_on>`                                                           Whether, and for which zone types (Lagr. wall film or cell zones [for free-stream particles]).

:ref:`exch_details_in_dpm_summ_rep_enabled <exch_details_in_dpm_summ_rep_enabled>`                                                                  Specifies whether to print per-zone exchange details in DPM extended summary reports.

:ref:`injection_diameter_statistics <injection_diameter_statistics>`                     Configure and manipulate (e.g., print or reset) particle diameter statistics (dv_10, dv_50, dv_90 etc.) for injections using size distributions.

==================================================================================   ====================================================================================================================================================

.. rubric:: Methods

==========================================================================   =================================================================================

Method                                                                                                                                                 Summary

==========================================================================   =================================================================================
:ref:`summary <summary_1>`                                                                              Print discrete phase summary report of particle fates.

:ref:`extended_summary <extended_summary>`                                       Print extended discrete phase summary report of particle fates, with options.

:ref:`per_injection_zone_summaries <per_injection_zone_summaries>`                                          Enable per-injection per-zone DPM summary reports.

:ref:`particle_summary <particle_summary>`                                                                     Print summary report for all current particles.

:ref:`print_injection_table_statistics <print_injection_table_statistics>`                              Print tabulated particle size distribution statistics.

:ref:`reset_accumulated_statistics <reset_accumulated_statistics>`                                         Reset all accumulated particle diameter statistics.

==========================================================================   =================================================================================

.. rubric:: Included in:

==========================   ======================================================================================================================================================================================

Parent                                                                                                                                                                                                      Summary

==========================   ======================================================================================================================================================================================
:ref:`report_2 <report_2>`       Provides access to common settings to set up reports for your CFD simulation. Reports can be compiled for fluxes forces projected areas surface and volume integrals among others.

==========================   ======================================================================================================================================================================================

